--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -45,8 +45,8 @@ a:hover { color: #FF0; }
   top: 0;
   left: 0;
   z-index: 99999;
- 
-  text-align: right;
+  width: 100%;
+
   background: #f2f2f2;
   -webkit-transition: all .3s;
   transition: all .3s;
@@ -155,11 +155,15 @@ a:hover { color: #FF0; }
 
 
 .baner-content {
-  padding-top: 30vh;
+  padding-top: 10vh;
   text-align: center;
-  background-image: url(../img/source2\ \(2\).png);
+ 
   background-repeat: no-repeat;
   background-size: 85%;
+}
+.baner-content img {
+  width: 85%;
+  margin: auto;
 }
 
 .baner-content h1 {
@@ -195,13 +199,11 @@ a:hover { color: #FF0; }
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15vh;
-  background-image: url(../img/source.png);
-  background-size: 95%;
+
   background-repeat: no-repeat ;
 
   min-height: 100vh;
 
-  background-position: center center;
 }
 
 .service-content .left-text h4 {
