--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -160,7 +160,7 @@ a:hover { color: #FF0; }
 
 
 .baner-content {
-  padding-top: 10vh;
+
   text-align: center;
  
   background-repeat: no-repeat;
@@ -327,8 +327,12 @@ h4, .h4 {
   background-size: cover;
   background-position: center center;
 }
-.tabs-content img ,.service-content img ,.parallax-content img {
+.tabs-content img ,.service-content img {
   width: 80%;
+  margin: auto;
+}
+.parallax-content img {
+  width: 95%;
   margin: auto;
 }
 
