--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -14,411 +14,41 @@
   padding: 6px;
 }
 
-p {
-  font-size: 15px;
-  line-height: 25px;
-}
 
 section {
-  padding: 15vh 0 35px;
+  padding: 10vh 0 35px;
   background: #fff;
 }
 footer {
-  padding: 15vh 0 35px !important;
+  padding: 10vh 0 35px !important;
 
 }
-
-body { 
-  position: relative; /* we need this for the scrollspy */ 
-  font-size: 14px;
-}
-
-a { color: #3CC; }
-
-a:hover { color: #FF0; }
-
-/*----------
-  NAV
-----------*/
-
-.fixed-side-navbar {
-  position: fixed;
-  top: 50%;
-  right: 0;
-  z-index: 99999;
-  margin-top: -100px;
-  text-align: right;
-  padding: 30px 0;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-.fixed-side-navbar-logo {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 99999;
-  width: 100%;
-
+.navbar a, .navbar a:focus {
  
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-.fixed-side-navbar-logo img{
-  background: #f2f2f2;
-  padding: 5px;
-}
-.fixed-side-navbar:hover {
-  background: transparent;
-}
-.fixed-side-navbar:hover .nav > li > a > span {
-  color: rgba(0, 0, 0, 0.5);
-  display: block;
-  background-color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 12px;
-  padding: 2px 12px;
-  border-radius: 15px;
-}
-.fixed-side-navbar .nav > li a.active {
-  background-color: transparent;
-  color: black;
-}
-.fixed-side-navbar .nav > li a.active:after {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-}
-.fixed-side-navbar .nav > li a.active:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: 17px;
-  margin-top: -8px;
-  width: 16px;
-  height: 16px;
-  background: transparent;
-  border: 2px solid #2574b5;
-  border-radius: 10px;
-}
-.nav>li {
-  position: relative;
-  display: block;
-}
-.fixed-side-navbar .nav > li a {
-  color: #fff;
-  min-height: 32px;
-  background: transparent;
-  padding: 5px 45px 5px 25px;
-  border-right: none;
-}
-.fixed-side-navbar .nav > li a span {
-  display: none;
-  -webkit-transition: all .2s;
-  transition: all .2s;
-}
-.fixed-side-navbar .nav > li a:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  margin-top: -5px;
-  width: 10px;
-  height: 10px;
-  border-radius: 10px;
-  background: #2574b5;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-  -webkit-transform: scale(0.6);
-          transform: scale(0.6);
-}
-.fixed-side-navbar .nav > li a:hover {
-  background-color: transparent;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-color: black;
-  boder-right: 0;
-}
-.fixed-side-navbar .nav > li a:hover > span {
-  color: black;
-  display: block;
-}
-
-.fadeInRight {
-  -webkit-animation-name: fadeInRight;
-          animation-name: fadeInRight;
-}
+ padding: .5rem 1rem !important; 
 
 
-.primary-button a {
-  display: inline-block;
-  background-color: #2574b5;
-  padding: 15px 24px;
-  border-radius: 3px;
-  text-transform: uppercase;
-  font-size: 11px;
-  color: #fff;
-  font-weight: 700;
-  text-decoration: none;
-  letter-spacing: 0.5px;
 }
-
-
-.parallax-content {
-  width: 100%;
-  min-height: 100vh;
-  margin-top: 3%;
-  background-size: cover;
-  position: relative;
-  display: table-cell;
-  vertical-align: middle;
+.section-header{
+padding-bottom: 20px !important;
 }
-
-
-.baner-content {
-
-  text-align: center;
- 
-  background-repeat: no-repeat;
-  background-size: 85%;
-}
-.baner-content img {
-
-  margin: auto;
-}
-
-.baner-content h1 {
-  margin-top: 0px;
-  font-size: 128px;
-  color: #fff;
-  font-weight: 900;
-  text-transform: uppercase;
-  margin-bottom: 0px;
-}
-
-.baner-content em {
-  color: #2574b5;
-  font-weight: 600;
-  font-style: normal;
-}
-
-
-.baner-content .primary-button {
-  margin-top: 15px;
-}
-
-
 
 .service-content {
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 15vh;
+  padding-top: 10vh;
 
   background-repeat: no-repeat ;
  text-align: center;
-  min-height: 100vh;
+
 
 }
-
-.service-content .left-text h4 {
-  font-size: 24px;
-  font-weight: 500;
-  color: #fff;
-}
-
-h4, .h4 {
-  font-size: 18px;
-}
-
-.service-content .left-text .line-dec {
-  width: 45px;
-  height: 3px;
-  background-color: #2574b5;
-  margin: 20px 0px 20px 0px;
-}
-
-.service-content .left-text p {
-  color: #fff;
-}
-
-.service-content .left-text ul {
-  padding: 0;
-  margin-top: 30px;
-  list-style: none;
-}
-
-.service-content .left-text ul li {
-  margin: 15px 0px;
-  font-weight: 600;
-  color: #fff;
-}
-
-.service-content .left-text .primary-button {
-  margin: 30px 0px;
-}
-
-.service-content .service-item {
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 25px 30px;
-  text-align: center;
-  color: #fff;
-  margin-bottom: 30px;
-}
-
-.service-content .service-item .line-dec {
-  width: 45px;
-  height: 3px;
-  background-color: #2574b5;
-  margin: 20px auto 15px auto;
-}
-
-
-
-.projects-content {
-  padding-top: 20vh;
-  background-image: url(../img/3rd-section.jpg);
-}
-
-.projects-content .item img {
-  width: 100%;
-}
-
-.projects-content .item {
-  margin: 15px;
-}
-
-.projects-content .item .text-content {
-  background-color: #fff;
-  text-align: center;
-  padding: 20px;
-}
-
-.projects-content .item .text-content h4 {
-  margin-top: 0px;
-  font-size: 19px;
-  font-weight: 600;
-}
-
-.projects-content .item .text-content span {
-  font-style: normal;
-  font-size: 17px;
-  font-weight: 700;
-  color: #2574b5;
-}
-
-.owl-pagination {
-  margin-top: 40px;
-  opacity: 1;
-  display: inline-block;
-}
-
-.owl-page span {
-  display: block;
-  width: 14px;
-  height: 14px;
-  margin: 0px 5px;
-  filter: alpha(opacity=50);
-  opacity: 0.5;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  background: #fff;
-}
-.btn-more-info{
-  position: absolute;
-  bottom: 130px;
-  left: 20px;
-}
-
-.tabs-content {
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 2vh;
-   
-   text-align: center;
-  min-height: 100vh;
-  background-size: cover;
-  background-position: center center;
-  display: table-cell;
-  vertical-align: middle;
-}
-.tabs-content img ,.service-content img {
+.service-content img  {
+ 
   width: 80%;
   margin: auto;
-}
-.parallax-content img {
-  width: 95%;
-  margin: auto;
-}
-
-section {
-  background-color: transparent;
-  padding-bottom: 15px;
-}
-
-.wrapper {
-  text-align: center;
-}
-
-.tabs {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-
-.tabs li {
-  display: inline-block;
-  text-align: center;
-  margin: 10px;
-}
-
-.tabs a {
-  display:block;
-  text-align:center;
-  text-decoration:none;
-  text-transform:uppercase;
-  color:#fff;
-  font-size: 14px;
-  font-weight: 700;
-  padding:10px 15px;
-  border:4px solid #fff;
-}
-
-.tabs a:hover {
-  color: #2574b5;
-}
-
-.tabs .active {
-  border:4px solid #2574b5;
-}
-
-.tabgroup div  {
 
 }
-
-.tabgroup p {
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  padding: 25px;
-}
-
-.clearfix:after {
-  content:"";
-  display:table;
-  clear:both;
-}
-
-
-
-.map {
-  margin-bottom: 30px;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 30px 20px;
-}
-
-
-
-
 
 #warning-message {
   
@@ -442,8 +72,11 @@ section {
 }
 
 @media only screen and (orientation:portrait){
-    .landModeCl { display:none; }
-    #warning-message { display:block; }
+  .service-content img  {
+ 
+   transform: rotate(90deg);
+  
+  }
 }
 @media only screen and (orientation:landscape){
     #warning-message { display:none; }
@@ -451,26 +84,7 @@ section {
 
 @media (max-width: 767px){
   
-  .baner-content {
-    padding-top: 5vh;
-  }
 
-  .baner-content h1 {
-    font-size: 64px;
-  }
-
-  .fixed-side-navbar-logo img {
-   
-    width: 150px;
-}
-
-  .baner-content span {
-    font-size: 24px;
-  }
-
-  .baner-content .primary-button {
-    margin-top: 15px;
-  }
   
 
   .service-content {
@@ -488,24 +102,7 @@ section {
 
   }
 
-  .service-content .left-text .line-dec {
-    width: 45px;
-    height: 3px;
-    background-color: #2574b5;
-    margin: 20px auto 20px auto;
-  }
-
-  .service-content .left-text ul {
-    text-align: left;
-  }
-
-  .service-content .service-item {
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 25px 30px;
-    text-align: center;
-    color: #fff;
-    margin-bottom: 30px;
-  }
+ 
 
 }
 
@@ -515,218 +112,4 @@ section {
   }
 }
 
-/* LIGHT BOX */
 
-body:after {
-  content: url(../img/close.png) url(../img/loading.gif) url(../img/prev.png) url(../img/next.png);
-  display: none;
-}
-
-body.lb-disable-scrolling {
-  overflow: hidden;
-}
-
-.lightboxOverlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 99999;
-  background-color: black;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
-  opacity: 0.8;
-  display: none;
-}
-
-.lightbox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 100000;
-  text-align: center;
-  line-height: 0;
-  font-weight: normal;
-}
-
-.lightbox .lb-image {
-  display: block;
-  height: auto;
-  max-width: inherit;
-  max-height: none;
-  border-radius: 3px;
-
-  /* Image border */
-  border: 4px solid white;
-}
-
-.lightbox a img {
-  border: none;
-}
-
-.lb-outerContainer {
-  position: relative;
-  *zoom: 1;
-  width: 250px;
-  height: 250px;
-  margin: 0 auto;
-  border-radius: 4px;
-
-  /* Background color behind image.
-     This is visible during transitions. */
-  background-color: white;
-}
-
-.lb-outerContainer:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.lb-loader {
-  position: absolute;
-  top: 43%;
-  left: 0;
-  height: 25%;
-  width: 100%;
-  text-align: center;
-  line-height: 0;
-}
-
-.lb-cancel {
-  display: block;
-  width: 32px;
-  height: 32px;
-  margin: 0 auto;
-  background: url(../img/loading.gif) no-repeat;
-}
-
-.lb-nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 10;
-}
-
-.lb-container > .nav {
-  left: 0;
-}
-
-.lb-nav a {
-  outline: none;
-  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
-}
-
-.lb-prev, .lb-next {
-  height: 100%;
-  cursor: pointer;
-  display: block;
-}
-
-.lb-nav a.lb-prev {
-  width: 34%;
-  left: 0;
-  float: left;
-  background: url(../img/prev.png) left 48% no-repeat;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -webkit-transition: opacity 0.6s;
-  -moz-transition: opacity 0.6s;
-  -o-transition: opacity 0.6s;
-  transition: opacity 0.6s;
-}
-
-.lb-nav a.lb-prev:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-
-.lb-nav a.lb-next {
-  width: 64%;
-  right: 0;
-  float: right;
-  background: url(../img/next.png) right 48% no-repeat;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -webkit-transition: opacity 0.6s;
-  -moz-transition: opacity 0.6s;
-  -o-transition: opacity 0.6s;
-  transition: opacity 0.6s;
-}
-
-.lb-nav a.lb-next:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-
-.lb-dataContainer {
-  margin: 0 auto;
-  padding-top: 5px;
-  *zoom: 1;
-  width: 100%;
-  -moz-border-radius-bottomleft: 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-.lb-dataContainer:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.lb-data {
-  padding: 0 4px;
-  color: #ccc;
-}
-
-.lb-data .lb-details {
-  width: 85%;
-  float: left;
-  text-align: left;
-  line-height: 1.1em;
-}
-
-.lb-data .lb-caption {
-  font-size: 13px;
-  font-weight: bold;
-  line-height: 1em;
-}
-
-.lb-data .lb-caption a {
-  color: #4ae;
-}
-
-.lb-data .lb-number {
-  display: block;
-  clear: left;
-  padding-bottom: 1em;
-  font-size: 12px;
-  color: #999999;
-}
-
-.lb-data .lb-close {
-  display: block;
-  float: right;
-  width: 30px;
-  height: 30px;
-  background: url(../img/close.png) top right no-repeat;
-  text-align: right;
-  outline: none;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-  opacity: 0.7;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-}
-
-.lb-data .lb-close:hover {
-  cursor: pointer;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
