--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2412,3 +2412,422 @@ section {
   font-size: 13px;
   color: #012970;
 }
+
+
+
+
+
+
+
+
+.profile_container {
+	max-width: 92%;
+	margin-top: 8%;
+	margin-bottom: 100px;
+}
+
+.profile-header {
+	background: #fff;
+	width: 100%;
+	display: flex;
+	height: 190px;
+	position: relative;
+	box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2);
+	border-top: solid #0a65ab ;
+	border-radius: 5px
+}
+
+.profile-img {
+	float: left;
+	width: 340px;
+	height: 200px;
+	position: relative;
+}
+
+.profile-img:hover .upload-btn-wrapper {
+	visibility: visible;
+}
+
+.upload-btn-wrapper {
+	position: absolute;
+	right: 100px;
+	bottom: -6px;
+	overflow: hidden;
+	display: inline-block;
+	z-index: 5;
+	visibility: hidden;
+}
+
+.upload-btn-wrapper .btn {
+	border: 2px solid #10459a7c;
+	color: #10459a;
+	background-color: rgba(255, 255, 255, 0.747);
+	padding: 8px 20px;
+	border-radius: 8px;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.upload-btn-wrapper input[type=file] {
+	font-size: 25px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
+}
+
+.profile-img img {
+	border-radius: 50%;
+	height: 230px;
+	width: 230px;
+	border: 2px solid #10459a2c;
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+	position: absolute;
+	left: 50px;
+	top: 20px;
+	z-index: 5;
+	background: #fff;
+}
+
+.profile-nav-info {
+	float: left;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding-top: 60px;
+}
+
+.profile-nav-info h3 {
+	font-variant: small-caps;
+	font-size: 2rem;
+	font-family: sans-serif;
+	font-weight: bold;
+}
+
+.profile-nav-info .address {
+    display: flex;
+    flex-wrap: wrap;
+    color: #777;
+    border: 2px solid #0a65ab ;
+    text-align: center;
+    width: 100%;
+    padding: 5px;
+	border-radius: 6px;
+}
+
+.profile-nav-info .address p {
+	margin: inherit;
+	margin-right: 3px;
+}
+.profile-nav-info .address span {
+	font-weight: bold;
+}
+
+.profile-option {
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	right: 50px;
+	top: 50%;
+	transform: translateY(-50%);
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	transition: all 0.5s ease-in-out;
+	outline: none;
+	background: #0a65ab ;
+}
+
+.profile-option:hover {
+	background: #fff;
+	border: 1px solid #0a65ab ;
+}
+
+.profile-option:hover .notification i {
+	color: #0a65ab ;
+}
+
+.profile-option:hover span {
+	background: #0a65ab ;
+}
+
+.profile-option .notification i {
+	color: #fff;
+	font-size: 1.2rem;
+	transition: all 0.5s ease-in-out;
+}
+
+.profile-option .notification .alert-message {
+	position: absolute;
+	top: -5px;
+	right: -5px;
+	background: #fff;
+	color: #0a65ab ;
+	border: 1px solid #0a65ab ;
+	padding: 5px;
+	border-radius: 50%;
+	height: 20px;
+	width: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 0.8rem;
+	font-weight: bold;
+}
+
+.main-bd {
+	width: 100%;
+	display: flex;
+	padding-right: 15px;
+}
+
+.profile-side {
+	width: 300px;
+	background: #fff;
+	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+	padding: 90px 30px 20px;
+	font-family: "Bree Serif", serif;
+	z-index: 99;
+	border-left: 7px solid #0a65ab ;
+	border-radius: 5px;
+	margin-top: 10px;
+}
+
+.profile-side p {
+	margin-bottom: 7px;
+	color: #333;
+	font-size: 14px;
+}
+
+.profile-side p i {
+	color: #0a65ab ;
+	margin-right: 10px;
+}
+
+.mobile-no i {
+	transform: rotateY(180deg);
+	color: #0a65ab ;
+}
+
+.profile-btn {
+	display: flex;
+}
+
+button.chatbtn,
+button.createbtn {
+	border: 0;
+	padding: 10px;
+	width: 100%;
+	border-radius: 3px;
+	background: #0a65ab ;
+	color: #fff;
+	font-family: "Bree Serif";
+	font-size: 1rem;
+	margin: 5px 2px;
+	cursor: pointer;
+	outline: none;
+	margin-bottom: 10px;
+	transition: background 0.3s ease-in-out;
+	box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.3);
+}
+
+button.chatbtn:hover,
+button.createbtn:hover {
+	background: #84c225;
+}
+
+button.chatbtn i,
+button.createbtn i {
+	margin-right: 5px;
+}
+
+.user-rating {
+	display: flex;
+}
+
+.user-rating h3 {
+	font-size: 2.5rem;
+	font-weight: 200;
+	margin-right: 5px;
+	letter-spacing: 1px;
+	color: #666;
+}
+
+.user-rating .no-of-user-rate {
+	font-size: 0.9rem;
+}
+
+.rate {
+	padding-top: 6px;
+}
+
+.rate i {
+	font-size: 0.9rem;
+	color: rgba(228, 0, 70, 1);
+}
+
+.nav_custom_profile {
+	width: 100%;
+	z-index: -1;
+}
+
+.nav_custom_profile ul {
+	display: flex;
+	justify-content: space-around;
+	list-style-type: none;
+	height: auto;
+	background: #fff;
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+	width: 100%;
+}
+
+.nav_custom_profile ul li {
+	padding: 10px;
+	width: 100%;
+	cursor: pointer;
+	text-align: center;
+	transition: all 0.2s ease-in-out;
+}
+
+.nav_custom_profile ul li:hover,
+.nav_custom_profile ul li.active {
+	box-shadow: 0px -3px 0px #0a65ab  inset;
+}
+
+.profile-body {
+	width: 100%;
+	z-index: -1;
+}
+
+.tab {
+	display: none;
+}
+
+.tab {
+	padding: 20px;
+	width: 100%;
+	text-align: center;
+}
+
+@media (max-width: 1100px) {
+	.profile-side {
+		width: 250px;
+		padding: 90px 15px 20px;
+	}
+
+	.profile-img img {
+		height: 200px;
+		width: 200px;
+		left: 50px;
+		top: 50px;
+	}
+}
+
+@media (max-width: 900px) {
+
+
+	.profile-header {
+		display: flex;
+		height: 100%;
+		flex-direction: column;
+		text-align: center;
+		padding-bottom: 20px;
+	}
+
+	.profile-img {
+		float: left;
+		width: 100%;
+		height: 200px;
+	}
+
+
+	.profile-img img {
+		position: relative;
+		height: 200px;
+		width: 200px;
+		left: 0px;
+	}
+
+	.profile-nav-info {
+		text-align: center;
+	}
+
+	.profile-option {
+		right: 20px;
+		top: 75%;
+		transform: translateY(50%);
+	}
+
+	.main-bd {
+		flex-direction: column;
+		padding-right: 0;
+	}
+
+	.profile-side {
+		width: 100%;
+		text-align: center;
+		padding: 20px;
+		margin: 5px 0;
+	}
+
+	.profile-nav-info .address {
+		justify-content: center;
+	}
+
+	.user-rating {
+		justify-content: center;
+	}
+}
+
+@media (max-width: 400px) {
+
+	/* 	.profile-header h3 {
+	} */
+
+	.profile-option {
+		width: 30px;
+		height: 30px;
+		position: absolute;
+		right: 15px;
+		top: 83%;
+		display: none;
+	}
+
+	.profile-option .notification .alert-message {
+		top: -3px;
+		right: -4px;
+		padding: 4px;
+		height: 15px;
+		width: 15px;
+		font-size: 0.7rem;
+	}
+
+	.profile-nav-info h3 {
+		font-size: 1.9rem;
+	}
+
+	.profile-nav-info .address p,
+	.profile-nav-info .address span {
+		font-size: 0.7rem;
+	}
+}
+
+#see-more-bio,
+#see-less-bio {
+	color: blue;
+	cursor: pointer;
+	text-transform: lowercase;
+}
+
+.tab h1 {
+	font-family: "Bree Serif", sans-serif;
+	display: flex;
+	justify-content: center;
+
+}
+
+.profile-posts {
+	font-size: 12px;
+}
