--- a/css/more.css
+++ b/css/more.css
@@ -119,6 +119,14 @@ body {
     font-size: 14px;
     cursor: pointer;
 }
+@media (max-width: 767px) {
+    #fv-dots {
+       
+        left: 90%;
+        
+    }
+  
+  }
 
 #fv-dots:hover .fv-tooltiptext {
     visibility: visible
