--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1787,6 +1787,9 @@ section {
 .blog .entry .entry-content p {
   line-height: 24px;
 }
+.entry-content img {
+ max-width: 100% !important;
+}
 
 .blog .entry .entry-content .read-more {
   -moz-text-align-last: right;
@@ -2191,7 +2194,7 @@ section {
 .blog .sidebar .recent-posts h4 {
   font-size: 15px;
   margin-left: 60px;
-  font-weight: bold;
+ 
 }
 
 .blog .sidebar .recent-posts h4 a {
