--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3018,3 +3018,70 @@ button.createbtn i {
     transform: translateX(100%) rotate(0deg);
  }
 }
+
+.alert{
+	box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+     
+	font-family: -apple-system,BlinkMacSystemFont,'Roboto','Segoe UI','Oxygen-Sans','Ubuntu','Cantarell','Helvetica Neue',sans-serif;
+    min-height: 38px;
+    padding: 12px 15px 15px;
+    margin: 0px auto;
+    border-radius: 4px;
+    border-left: 4px solid;
+	opacity:1;
+	   transition: opacity 0.6s;
+	max-width:100%;
+	-webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+.warning {
+    background: rgba(244, 215, 201, .37);
+    color: #d93025;
+   
+}
+.info {
+    background: rgba(186, 208, 228, .37);
+    color: #00539f;
+    
+}
+.success {
+	color: #33691E;
+    background: #DCEDC8;
+    
+}
+.tip {
+    background: #fff5e6;
+    color: #ff9800;
+ 
+}
+.alert-close{
+	   padding-left: 15px;
+    font-weight: bold;
+    float: right;
+    font-size: 20px;
+    line-height: 18px;
+    cursor: pointer;
+	   transition:.30s all;
+}
+.alert-close:hover{
+	color:#000;
+}
+.alert code, .alert .mark{
+    background: #fff;
+    opacity: 0.9;
+    padding: 3px 5px;
+    border-radius: 4px;
+    font-family: Consolas,Monaco,'Andale Mono',monospace;
+    font-size: 89%;
+    font-weight: normal;
+}
+
+.alert_box_inside{
+	position: fixed;
+    /* top: 100px; */
+    bottom: 50px;
+    z-index: 500000;
+    background-color: #ffff;
+}
